processed/jira/txt/LU/LU-9137.txt
Key:        LU-9137
Summary:    readdir_r is deprecated now
Link:       https://jira.whamcloud.com/browse/LU-9137
Type:       Improvement
Priority:   Major
Status:     Resolved
Resolution: Fixed
Assignee:   James A Simmons
Reporter:   Oleg Drokin
Created:    Sun, 19 Feb 2017 21:05:05 +0000
Updated:    Sat, 3 Jun 2017 04:32:16 +0000
Resolved:   Sat, 3 Jun 2017 04:32:16 +0000

--- Description ---
Trying to build Lustre on Fedora 25 I got hit by this:

lhsmtool_posix.c: In function Бct_import_recurseБ:
lhsmtool_posix.c:1499:3: error: Бreaddir_rБ is deprecated [-Werror=deprecated-de
clarations]
   rc = readdir_r(dir, &ent, &cookie);
   ^~
In file included from /usr/include/features.h:368:0,
                 from /usr/include/stdio.h:27,
                 from lhsmtool_posix.c:40:
/usr/include/dirent.h:189:12: note: declared here
 extern int __REDIRECT (readdir_r,
            ^
lhsmtool_posix.c: In function Бct_dir_level_maxБ:
lhsmtool_posix.c:1710:2: error: Бreaddir_rБ is deprecated [-Werror=deprecated-declarations]
  while ((rc = readdir_r(dir, &ent, &cookie)) == 0) {
  ^~~~~
In file included from /usr/include/features.h:368:0,
                 from /usr/include/stdio.h:27,
                 from lhsmtool_posix.c:40:
/usr/include/dirent.h:189:12: note: declared here
 extern int __REDIRECT (readdir_r,
            ^

man readdir_r on my Fedora25 system says that modern posix does not guarantee thread-safedness of readdir, bug glibc and other modern implementation versions of readdir are safe as long as you give it different input streams.

--- Comment (pjones, Sat, 3 Jun 2017 04:32:16 +0000) ---
Landed for 2.10

--- Comment (gerrit, Sat, 3 Jun 2017 03:57:36 +0000) ---
Oleg Drokin (oleg.drokin@intel.com) merged in patch https://review.whamcloud.com/27276/

Subject: LU-9137 utils: replace readdir_r with readdir

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 76b1fd6596e62cfb6a2543240db8d0823c1a1465

--- Comment (gerrit, Wed, 24 May 2017 20:26:28 +0000) ---
James Simmons (uja.ornl@yahoo.com) uploaded a new patch: https://review.whamcloud.com/27276

Subject: LU-9137 utils: replace readdir_r with readdir

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: bcba6161f4eb8bdb739f363d1a6bc90d19fe649d

--- Comment (bogl, Fri, 14 Apr 2017 18:45:56 +0000) ---
The same problem happens in builds on Ubuntu 17.
